[package]
name = "lapimposteur-ctl"
version = "0.1.0"
authors = ["Cyril Delmas <c.delmas@lectra.com>"]

[[bin]]
name = "lapimposteur"

[dependencies]
clap = "2.32.0"
env_logger = "0.5.13"
# not sure this is required, as ctl will control lapimposteur via its amqp interface
# maybe message definition should be exported from lib?
lapimposteur-lib = { version = "^0.1.0", path = "../lib" }
log = "0.4.6"
