[package]
name = "lapimposteur-lib"
version = "0.1.0"
authors = ["Cyril Delmas <c.delmas@lectra.com>"]

[lib]

[dependencies]
failure = "0.1.3"
futures = "0.1.25"
jsonpath = "0.1.1"
lapin-futures = "0.15.0"
log = "0.4.6"
maplit = "1.0.1"
nom = "4.1.1"
rand = "0.6.1"
rust-crypto = "0.2"
rustache = "0.1"
serde_json = "1.0.34"
tokio = "0.1.11"

[features]
unstable = []
experimental = []
deprecated = []