[package]
name = "lapimposteur-lib"
version = "0.1.0"
authors = ["Cyril Delmas <c.delmas@lectra.com>"]

[lib]

[dependencies]
chrono = "0.4"
failure = "0.1.5"
cron = "0.6.0"
futures = "0.1.25"
jsonpath = "0.1.1"
lapin-futures-rustls = "0.21.0"
log = "0.4.6"
maplit = "1.0.1"
mustache = "0.9.0"
nom = "4.2.1"
rand = "0.6"
serde = "1.0.89"
serde_json = "1.0.39"
tokio = "0.1.15"
uuid = {version="0.7.2", features= ["v4"]}

[features]
unstable = []
experimental = []
deprecated = []